--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    tools:ignore="ExtraText">
-    android:orientation="vertical"
+    tools:ignore="ExtraText"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
@@ -18,8 +18,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/ButtonText"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
